# Methods_Of_Solving_Of_Nonlinear_Equations

./: CMakeLists.txt  README.md  function.cpp  function.h  iteration_method.cpp  iteration_method.h  main.cpp  modified_newton_method.cpp  modified_newton_method.h  newton_method.cpp  newton_method.h  numeric_engine.cpp  numeric_engine.h  numeric_method.h  resources.h
